--- a/styles.css
+++ b/styles.css
@@ -88,3 +88,35 @@ footer {
   padding: 16px;
   margin-top: 40px;
 }
+#todo-time {
+  margin-top: 2rem;
+}
+
+#todo-form {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+  margin-bottom: 1rem;
+}
+
+.todo-list {
+  list-style: none;
+  padding-left: 0;
+}
+
+.todo-list li {
+  background: #eef;
+  margin-bottom: 0.5rem;
+  padding: 0.5rem;
+  border-left: 5px solid #007acc;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.todo-list li.completed {
+  background-color: #d4edda;
+  text-decoration: line-through;
+  opacity: 0.6;
+}
+
